--- a/src/Makefile
+++ b/src/Makefile
@@ -146,7 +146,9 @@
 #   + remove obsolete install feature
 #   + finall add debug flag;  make debug
 #
-# Jun 24 2021: include sntools_genGauss_asym dependence for SALT2mu
+# Jun 24 2021: 
+#   + include sntools_genGauss_asym dependence for SALT2mu
+#
 # ---------------------------------------------------------------------
 
 SHELL = /bin/sh
@@ -311,7 +313,6 @@ SRC  = ../src
 LIB  = ../lib
 TMPANA = $(SRC)/tempana
 TMPFIT = $(SRC)/tempfit
-
 
 # --------------------------------------------
 
