--- a/src/Makefile
+++ b/src/Makefile
@@ -171,8 +171,8 @@ CC   = gcc
   EXTRA_FLAGS = -O1   # -ftree-vectorize -ftree-vectorizer-verbose=2
   PROFILEFLAG = 
 
-# EXTRA_FLAGS = -O2 -Wall
-#  EXTRA_FLAGS = -g -fbounds-check  # valgrind --leak-check=full 
+# EXTRA_FLAGS = -O2 -
+  EXTRA_FLAGS = -g -fbounds-check  # valgrind --leak-check=full 
 
 # check if gcc version is 10 or higher (9.2020)
 GCCVERSION10 := $(shell expr `gcc -dumpversion | cut -f1 -d.` \>= 10)
