add a USE_BAYESN preproc flag that is set if env var BAYESN_YAML is defined TODO: maybe BAYESN_YAML env var check if libyaml is found

--- a/src/Makefile
+++ b/src/Makefile
@@ -579,7 +579,7 @@ $(BIN)/snlc_fit.exe : $(OBJ_SNFIT)
 	$(FFC) -o $@ $(SNLDFLAGS)  \
 	$(OBJ_SNFIT) 	\
 	$(LCFITSIO)  $(LGSL) 	\
-	$(LCERN)  $(LROOT) -lm  $(CPPLIB)
+	$(LCERN)  $(LROOT) -lm -lyaml $(CPPLIB)
 	(cd $(OBJ); rm snlc_fit.o )
 
 # -------------------------------------------------
